--- a/secondtasksolution/pom.xml
+++ b/secondtasksolution/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>firsttasksolution</artifactId>
+    <artifactId>secondtasksolution</artifactId>
     <packaging>jar</packaging>
 
     <properties>
