--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>secondtasksolution</module>
         <module>thirdtasksolution</module>
         <module>fourthtasksolution</module>
+        <module>fifthtasksolution</module>
     </modules>
 
     <properties>
