sixth task is ready

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>thirdtasksolution</module>
         <module>fourthtasksolution</module>
         <module>fifthtasksolution</module>
+        <module>sixthtasksolution</module>
     </modules>
 
     <properties>
